--- a/app/env/view/env.html
+++ b/app/env/view/env.html
@@ -1,30 +1,32 @@
 {{define "envRoot"}}
-    <fieldset>
-        <div class="row text-start">
-            <legend class="form-label">Env</legend>
-        </div>
-        <div class="row row-cols-auto">
-            <label class="col-form-label">ID</label>
-            <div class="col">
-                <input disabled type="text" class="form-control" value="{{ .ID }}" aria-label="ID">
+    <div id="env">
+        <fieldset>
+            <div class="row text-start">
+                <legend class="form-label">Env</legend>
             </div>
-            <label class="col-form-label">Name</label>
-            <div class="col">
-                <input disabled type="text" class="form-control" value="{{ .Name }}" aria-label="Name">
+            <div class="row row-cols-auto">
+                <label class="col-form-label">ID</label>
+                <div class="col">
+                    <input disabled type="text" class="form-control" value="{{ .ID }}" aria-label="ID">
+                </div>
+                <label class="col-form-label">Name</label>
+                <div class="col">
+                    <input disabled type="text" class="form-control" value="{{ .Name }}" aria-label="Name">
+                </div>
             </div>
-        </div>
-    </fieldset>
-    <table class="table" id="decls">
-        <tbody>
-        {{$url := "/gui/decls"}}
-        {{range .Decls}}
-            <tr>
-                <td>{{ typeOf . }}</td>
-                <td>
-                    <a href="{{ $url }}/{{ .ID }}" hx-get="{{ $url }}/{{ .ID }}" hx-target="#decls" hx-swap="outerHTML" hx-push-url="true">{{ .Name }}</a>
-                </td>
-            </tr>
-        {{end}}
-        </tbody>
-    </table>
+        </fieldset>
+        <table class="table">
+            <tbody>
+            {{$url := "/ssr/decls"}}
+            {{range .Decls}}
+                <tr>
+                    <td>
+                        <a href="{{ $url }}/{{ .ID }}" hx-boost="true" hx-target="#env" hx-swap="outerHTML">{{ .Name }}</a>
+                    </td>
+                    <td>{{ typeOf . }}</td>
+                </tr>
+            {{end}}
+            </tbody>
+        </table>
+    </div>
 {{end}}
