--- a/app/web/view/navbar.html
+++ b/app/web/view/navbar.html
@@ -1,7 +1,7 @@
 {{define "navbar"}}
     <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Rolevod</a>
+            <a class="navbar-brand" href="/">Rolevod</a>
         </div>
     </nav>
 {{end}}
