--- a/app/dcl/view/dcl.html
+++ b/app/dcl/view/dcl.html
@@ -1,4 +1,4 @@
-{{define "declRoot"}}
+{{define "dclRoot"}}
     <fieldset>
         <div class="row text-start">
             <legend class="form-label">Decl</legend>
