--- a/app/env/view/env.html
+++ b/app/env/view/env.html
@@ -17,11 +17,18 @@
         </fieldset>
         <table class="table">
             <tbody>
-            {{$url := "/ssr/decls"}}
-            {{range .Decls}}
+            {{range .Tps}}
                 <tr>
                     <td>
-                        <a href="{{ $url }}/{{ .ID }}" hx-boost="true" hx-target="#env" hx-swap="outerHTML">{{ .Name }}</a>
+                        <a href="/ssr/tps/{{ .ID }}" hx-target="#env" hx-swap="outerHTML" hx-boost="true">{{ .Name }}</a>
+                    </td>
+                    <td>{{ typeOf . }}</td>
+                </tr>
+            {{end}}
+            {{range .Exps}}
+                <tr>
+                    <td>
+                        <a href="/ssr/exps/{{ .ID }}" hx-target="#env" hx-swap="outerHTML" hx-boost="true">{{ .Name }}</a>
                     </td>
                     <td>{{ typeOf . }}</td>
                 </tr>
