--- a/app/dcl/view/tp.html
+++ b/app/dcl/view/tp.html
@@ -1,20 +1,32 @@
 {{define "tp"}}
     <script>
         Alpine.data('tp', () => ({
-            id: "{{.ID}}",
-            name: "{{.Name}}",
+            data: {{.}},
 
-            editable: false,
-
-            toggle() {
-                this.editable = !this.editable
+            save() {
+                console.log(JSON.stringify(this.data));
+                fetch('/api/v1/tps/{{.ID}}', {
+                    method: 'PUT',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(this.data)
+                })
+                .then(() => {
+                    console.log("Success")
+                })
+                .catch(() => {
+                    console.log("Failure")
+                });
             }
         }))
     </script>
     <div id="dcl" x-data="tp">
-        <input x-model="name" type="text" class="form-control">
-        <hr>
-        {{template "st" (dict "St" .St "Root" .ID)}}
+        <div class="row">
+            <div class="col-auto">
+                <input x-model="data.name" type="text" class="form-control">
+            </div>
+        </div>
+        {{template "st" (dict "St" .St "Root" .ID "Path" "data.st")}}
+        <button type="button" @click="save()" class="btn btn-primary">Save</button>
     </div>
 {{end}}
 
@@ -22,14 +34,18 @@
     {{$kinds := list "one" "ref" "tensor" "lolli" "with" "plus"}}
     {{if or (eq .St.K "with") (eq .St.K "plus")}}
         <ul>
-            <li>
-            {{range $label, $st := .St.Chs}}
+            <li style="list-style-type: '{{.St.K}}';">
+            {{range $i, $ch := .St.Chs}}
                 <details open>
-                    <summary>
-                        <input value="{{$label}}" type="text" class="form-control">
+                    <summary class="row" onclick="return false">
+                        <div class="col-auto ms-0">
+                            {{$lp := printf "%v.choices[%v].label" $.Path $i}}
+                            <input x-model="{{$lp}}" type="text" class="form-control">
+                        </div>
                     </summary>
-                    <ul>
-                        {{template "st" (dict "St" $st "Root" $.Root)}}
+                    <ul class="row">
+                        {{$sp := printf "%v.choices[%v].session" $.Path $i}}
+                        {{template "st" (dict "St" $ch.S "Root" $.Root "Path" $sp)}}
                     </ul>
                 </details>
             {{end}}
@@ -37,30 +53,40 @@
         </ul>
     {{else if or (eq .St.K "tensor") (eq .St.K "lolli")}}
         <ul>
-            <li>
-                {{template "st" (dict "St" .St.M "Root" .Root)}}
-                <select class="form-select">
-                {{range $k := $kinds}}
-                    <option value="{{$k}}" {{if eq $k $.St.K}}selected{{end}}>{{$k}}</option>
-                {{end}}
-                </select>
-                {{template "st" (dict "St" .St.S "Root" .Root)}}
+            <li class="input-group text-center align-items-center gap-2">
+                <div class="col-auto">
+                    {{template "st" (dict "St" .St.M "Root" .Root "Path" (printf "%v.message" $.Path))}}
+                </div>
+                <div class="col-1">
+                    <select x-model="{{printf "%v.kind" .Path}}" class="form-select">
+                    {{range $k := $kinds}}
+                        <option {{if eq $k $.St.K}}selected{{end}}>{{$k}}</option>
+                    {{end}}
+                    </select>
+                </div>
+                <div class="col-auto">                
+                    {{template "st" (dict "St" .St.S "Root" .Root "Path" (printf "%v.session" $.Path))}}
+                </div>
             </li>
             {{if ne .St.S.K "ref"}}
+            <div class="col-auto">
                 {{template "st" (dict "St" .St.S "Root" .Root)}}
+            </div>
             {{end}}
         </ul>
     {{else if eq .St.K "ref"}}
         {{if eq .St.ID .Root}}
-            <span x-text="name"></span>
+            <span x-text="data.name"></span>
         {{else}}
-            <a href="/ssr/tps/{{.St.ID}}" hx-target="#dcl" hx-swap="outerHTML" hx-boost="true">{{.St.Name}}</a>
+            <a x-text="{{printf "%v.name" .Path}}" href="/ssr/tps/{{.St.ID}}" hx-target="#dcl" hx-swap="outerHTML" hx-boost="true"></a>
         {{end}}
     {{else}}
-        <select class="form-select">
-        {{range $k := $kinds}}
-            <option value="{{$k}}" {{if eq $k $.St.K}}selected{{end}}>{{$k}}</option>
-        {{end}}
-        </select>
+        <div class="col-1">
+            <select x-model="{{printf "%v.kind" .Path}}" class="form-select">
+            {{range $k := $kinds}}
+                <option {{if eq $k $.St.K}}selected{{end}}>{{$k}}</option>
+            {{end}}
+            </select>
+        </div>
     {{end}}
 {{end}}
