--- a/app/role/view/tp.html
+++ b/app/role/view/tp.html
@@ -4,7 +4,7 @@
             data: {{.}},
 
             save() {
-                fetch('/api/v1/tps/{{.ID}}', {
+                fetch('/api/v1/roles/{{.ID}}', {
                     method: 'PUT',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(this.data)
@@ -18,7 +18,7 @@
             }
         }))
     </script>
-    <div id="dcl" x-data="tp">
+    <div id="role" x-data="tp">
         <div class="row">
             <div class="col-auto">
                 <input x-model="data.name" type="text" class="form-control">
@@ -77,7 +77,7 @@
         {{if eq .St.ID .Root}}
             <span x-text="data.name"></span>
         {{else}}
-            <a x-text="{{printf "%v.name" .Path}}" href="/ssr/tps/{{.St.ID}}" hx-target="#dcl" hx-swap="outerHTML" hx-boost="true"></a>
+            <a x-text="{{printf "%v.name" .Path}}" href="/ssr/roles/{{.St.ID}}" hx-target="#role" hx-swap="outerHTML" hx-boost="true"></a>
         {{end}}
     {{else}}
         <div class="col-1">
