Introduce seat, force and work modules

--- a/app/force/view/force.html
+++ b/app/force/view/force.html
@@ -1,5 +1,5 @@
-{{define "exp"}}
-    <div id="dcl">
+{{define "force"}}
+    <div id="force">
         <fieldset>
             <div class="row text-start">
                 <legend class="form-label">Decl</legend>
