Try to deal with deal

--- a/app/agent/view/force.html
+++ b/app/agent/view/force.html
@@ -1,5 +1,5 @@
-{{define "force"}}
-    <div id="force">
+{{define "agent"}}
+    <div id="agent">
         <fieldset>
             <div class="row text-start">
                 <legend class="form-label">Decl</legend>
