--- a/app/internal/chnl/view/chan.html
+++ b/app/internal/chnl/view/chan.html
@@ -1,5 +1,5 @@
-{{define "work"}}
-    <div id="work">
+{{define ""}}
+    <div id="">
         <fieldset>
             <div class="row text-start">
                 <legend class="form-label">Decl</legend>
