--- a/app/sig/view/sig.html
+++ b/app/sig/view/sig.html
@@ -1,5 +1,5 @@
-{{define "seat"}}
-    <div id="seat">
+{{define "sig"}}
+    <div id="sig">
         <fieldset>
             <div class="row text-start">
                 <legend class="form-label">Decl</legend>
