Start to think about owners

--- a/app/crew/view/agent.html
+++ b/app/crew/view/agent.html
@@ -1,5 +1,5 @@
-{{define "agent"}}
-    <div id="agent">
+{{define "crew"}}
+    <div id="crew">
         <fieldset>
             <div class="row text-start">
                 <legend class="form-label">Decl</legend>
