--- a/app/role/view/role.html
+++ b/app/role/view/role.html
@@ -21,7 +21,7 @@
     <div id="role" x-data="role">
         <div class="row">
             <div class="col-auto">
-                <input x-model="dto.name" type="text" class="form-control">
+                <input x-model="dto.title" type="text" class="form-control">
             </div>
         </div>
         {{template "st" (dict "St" .St "Root" .ID "Path" "dto.st")}}
