--- a/app/web/view/home.html
+++ b/app/web/view/home.html
@@ -27,7 +27,7 @@
                         {{range .}}
                             <tr>
                                 <td>
-                                    <a href="/ssr/roles/{{ .ID }}" hx-target="#roles" hx-swap="outerHTML" hx-boost="true">{{ .Name }}</a>
+                                    <a href="/ssr/roles/{{ .ID }}" hx-target="#roles" hx-swap="outerHTML" hx-boost="true">{{ .Title }}</a>
                                 </td>
                             </tr>
                         {{end}}
